# rainbrurpg

./: .gitignore  .gitmodules  .hgignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  DEPENDENCIES  Doxyfile.in  FT.sh  INSTALL  INSTALL.md  README.md  ROADMAP  SLOC.sh  TODO  TODO.global  changelog.dev  config.h.in  ft.el  next_release.rb  next_release_test.rb  release-all.sh  stats.pl
OLD/meta/: Makefile.in  TODO  configure.in
client/: ChangeLog  DEPENDENCIES  Makefile.am  README  ROADMAP  TODO  aclocal.m4  changelog.dev  client.spec.in  client.texi  client.texinfo  config.h.in  configure.ac  configure.in  rpg.cc  rpg.lsm.in  system.h  xmalloc.c
client/m4/: rb_boost_program_options.m4
client/media/: Makefile.am
client/src/: BaseApplication.h  GameEngine.cpp  GameEngine.hpp  LoadingBar.cpp  LoadingBar.hpp  Logger.hpp  Makefile.am  Makefile.in  main.cpp  ogre.cfg  plugins.cfg  plugins.cfg.in  resources.cfg
logger/: ChangeLog  DEPENDENCIES  Doxyfile  Makefile.am  Makefile.in  README  ROADMAP  TODO  aclocal.m4  changelog.dev  config.h.in  configure  configure.ac  configure.in  logger.cc  logger.info  logger.lsm.in  logger.spec.in  logger.texinfo  rainbrurpg-logger.1  rainbrurpg-logger.lsm.in  rainbrurpg-logger.pc.in  rainbrurpg-logger.spec.in  rainbrurpg-logger.texi  rainbrurpg-logger.texinfo  system.h  xmalloc.c
logger/api/: Makefile  guile.texi  logger.i  ruby.texi
logger/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
logger/m4/: ChangeLog  rb_boost_format.m4  rb_boost_program_options.m4  rb_rbuic.m4
logger/po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES.in
logger/src/: Logger.cpp  Logger.hpp  LoggerDef.hpp  LoggerOutput.cpp  LoggerOutput.hpp  LoggerOutputFile.cpp  LoggerOutputFile.hpp  LoggerOutputTty.cpp  LoggerOutputTty.hpp  LoggerOutputTxt.cpp  LoggerOutputTxt.hpp  LoggerOutputYaml.cpp  LoggerOutputYaml.hpp  Mainpage.hpp  Makefile.am  Makefile.in  Object.hpp  ObjectAttribute.cpp  ObjectAttribute.hpp  ObjectInspector.cpp  ObjectInspector.hpp
meta/: ChangeLog  Makefile.am  Makefile.in  README  ROADMAP  TODO  aclocal.m4  changelog.dev  configure  configure.in
meta/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
meta/src/: Makefile.am  Makefile.in  README
network/: ChangeLog  DEPENDENCIES  Makefile.am  ROADMAP  TODO  aclocal.m4  changelog.dev  configure.in  rainbrurpg-network.pc.in
network/src/: Makefile.am
rainbrurpg/: ChangeLog  ChangeLog.2008  ChangeLog.2009  ChangeLog.2010  Changelog  DEPENDENCIES  Doxyfile  Doxyfile.in  INSTALL  Makefile  Makefile.am  Makefile.am.linux  Makefile.am.win32  Makefile.in  README  ROADMAP  RainbruRPG-common.pc  RainbruRPG-editor.6  RainbruRPG-server.6  RainbruRPG.6  RainbruRPG.cc  RainbruRPG.info  RainbruRPG.lsm  RainbruRPG.lsm.in  RainbruRPG.spec  RainbruRPG.spec.in  RainbruRPG.texi  RainbruRPG.texinfo  RainbruRPG.texinfo.in  TODO  TODO.tapi  acinclude.m4  aclocal.m4  boostrap  bootstrap  bootstrap.win32  config.h  config.h.in  config.status  configure  (+18 more)
rainbrurpg/.deps/: RainbruRPG.Po  getopt.Po  getopt1.Po  xmalloc.Po
rainbrurpg/IrrClient/: Makefile  boolattribute.cpp  boolattribute.h  cocore.cpp  cocore.h  console.cpp  console.h  consoleobject.cpp  consoleobject.h  curlget.xml  erchangepassword.cpp  erchangepassword.h  erconnection.cpp  erconnection.h  erconsole.cpp  erconsole.h  ercreateaccount.cpp  ercreateaccount.h  ercreateperso.cpp  ercreateperso.h  ergame.cpp  ergame.h  ergameesc.cpp  ergameesc.h  erselectperso.cpp  erselectperso.h  fpsattribute.cpp  fpsattribute.h  gameengine.cpp  gameengine.h  gamestate.cpp  gamestate.h  gschangepassword.cpp  gschangepassword.h  gsconnection.cpp  gsconnection.h  gscreateaccount.cpp  gscreateaccount.h  gscreateperso.cpp  gscreateperso.h  (+31 more)
rainbrurpg/RainbruRPG.html/: Concept-Index.html  Copying.html  Instructions.html  Invoking-RainbruRPG.html  Makefile.am  Overview.html  Problems.html  Sample.html  Server.html  index.html
rainbrurpg/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
rainbrurpg/changelog.dev/: changelog.pre100  changelog.pre125  changelog.pre150  changelog.pre175  changelog.pre200  changelog.pre25  changelog.pre300  changelog.pre50  changelog.pre75
rainbrurpg/client/: Makefile  Makefile.am  Makefile.am.linux  Makefile.am.win32  Makefile.in  curlget.xml  exampleframelistener.cpp  gsconnection.cpp  gsconnection.h  gscreateaccount.cpp  gscreateaccount.h  gsmainmenu.cpp  gsmainmenu.h  gsmenubase.cpp  gsmenubase.h  gsserverlist.cpp  gsserverlist.h  gsupdatedatafiles.cpp  gsupdatedatafiles.h  guiframelistener.cpp  guiframelistener.h  guimanager.cpp  guimanager.h  languageselector.cpp  languageselector.h  launcher.cpp  launcher.cpp.save  launcher.h  launcheroptions.cpp  launcheroptions.h  main.cpp  newMain.cpp
rainbrurpg/common/: EasyBMP.cpp  Makefile  Makefile.am  Makefile.am.win32  Makefile.in  attributemodifierlist.cpp  attributemodifierlist.h  boostimport.h  chartbase.cpp  chartbase.h  chartline.cpp  chartline.h  chartserie.cpp  chartserie.h  clientconnect.cpp  clientconnect.h  curlaccountadd.cpp  curlaccountadd.h  curlaccountconfirmmail.cpp  curlaccountconfirmmail.h  curlaccountdelete.cpp  curlaccountdelete.h  curlaccounttoggleblacklist.cpp  curlaccounttoggleblacklist.h  curldefaultwritefunction.h  curlfiletoxml.cpp  curlfiletoxml.h  curlgetfile.cpp  curlgetfile.h  curlimport.h  curlinterface.cpp  curlinterface.h  curlpersoheaderadd.cpp  curlpersoheaderadd.h  curlpersoheaderdelete.cpp  curlpersoheaderdelete.h  curlpersomodifattrb.cpp  curlpersomodifattrb.h  (+112 more)
server/: ChangeLog  DEPENDENCIES  ROADMAP  TODO  aclocal.m4  config.h.in  configure.ac  configure.in
services/: ChangeLog  DEPENDENCIES  Makefile  Makefile.am  ROADMAP  Services.hpp  TODO  aclocal.m4  compute_dependencies.rb  compute_dependencies_test.rb  config.h.in  configure.in  equivs.cfg  main.cpp  rainbrurpg-services.pc.in
website/: AUTHORS  ChangeLog  Makefile.am  ROADMAP  TODO  UPGRADE_FOSWIKI.org  changelog.dev  configure  configure.in
(+5984 files in other folders)
