dnl Process this file with autoconf to produce a configure script.

AC_INIT(logger.cc)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(logger, 0.0.0-5)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_DEFUN([RB_CHECK_RBUIC],[
  AC_ARG_VAR([TOOL_RBUIC], [Define the path to the ruby UI compiler])
  AC_PATH_PROG(TOOL_RBUIC, rbuic4, [no])
  case $TOOL_RBUIC in
    no)
      dnl Nothing
      rbuic4_was_found=false
      ;;    
    *)   
      AC_DEFINE([HAVE_RBUIC], [], [Defines if the ruby UI compiler was found])
      AC_DEFINE(HAVE_RBUIC)
      rbuic4_was_found=true
      ;;
  esac  
  AM_CONDITIONAL(RBUIC_FOUND, test x$rbuic4_was_found = xtrue)
])
RB_CHECK_RBUIC

dnl Checks for libraries.
AC_LANG_PUSH([C++])
AC_CHECK_HEADERS([boost/program_options.hpp], [],
  [AC_MSG_ERROR(You need the Boost.Program_options development library.)])
dnl Cannot test for library with AC_CHECK_LIB due to namespace

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT([			\
  Makefile	       		\
  src/Makefile 	       		\
  src/tools/Makefile   		\
  src/examples/Makefile		\
  logger.lsm logger.spec])

echo
echo "------------------------------------------------------------------------"
echo "$PACKAGE v$VERSION configuration summary"
echo "------------------------------------------------------------------------"
echo
echo "Tools:"
echo "  rbuic..........................${TOOL_RBUIC}"
