#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([rainbrurpg-meta], [0.0.0-2], [rainbru@users.sf.net])
AM_INIT_AUTOMAKE(rainbrurpg-meta, 0.0.0-2)

# Handle the custom foswiki_prefix
AC_SUBST([plugindir], ['${libdir}/gedit-2/plugins'])

# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([
  Makefile
  src/Makefile
  src/foswiki_plugin/Makefile
])
