#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([rainbrurpg-network], [0.0.0-1], [rainbru@free.fr])
AM_INIT_AUTOMAKE(rainbrurpg-network, 0.0.0)

AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Conditional modules
AC_ARG_ENABLE(benchmarks,
  AC_HELP_STRING([--enable-benchmarks], [Enable network packets serializatiion 
    benchmarks]), [case "${enableval}" in
     yes | no ) WITH_BENCHMARKS="${enableval}" ;;
     *) AC_MSG_ERROR(bad value ${enableval} for --enable-benchmarks) ;;
   esac],
  [WITH_BENCHMARKS="no"]
)
AM_CONDITIONAL([WITH_BENCHMARKS], [test "x$WITH_BENCHMARKS" = "xyes"])

# Checks for libraries.
PKG_CHECK_MODULES([DEPS], [libenet])

# Checks for header files.
AC_CHECK_HEADERS([sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([gettimeofday])

AC_CONFIG_FILES([
   Makefile
   src/Makefile
   src/benchmark/Makefile
   src/proto/Makefile
   rainbrurpg-network.pc

 ])

AC_OUTPUT