dnl Process this file with autoconf to produce a configure script.

AC_INIT(RainbruRPG, 0.0.5, rainbru@users.sourceforge.net)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(RainbruRPG, 0.0.5)
dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)
AC_SUBST(VERSION)

AC_DEFINE([BUILD_RELEASE], ["193"], [The build release number])

dnl -----------------------------------------------
dnl Package name and version number (user defined)
dnl -----------------------------------------------

dnl The basename of all the RainbruRPG libraries' include
dnl directories
GENERIC_LIBRARY_NAME=RainbruRPG

dnl Defines the name of the libraries include directories

dnl   RainbruRPG-common
LIB_COMMON_NAME=common
AC_SUBST(LIB_COMMON_NAME)

dnl   RainbruRPG-terminalAPI
LIB_TERAPI_NAME=terminalAPI
AC_SUBST(LIB_TERAPI_NAME)

dnl   RainbruRPG-core
LIB_CORE_NAME=core
AC_SUBST(LIB_CORE_NAME)

dnl   RainbruRPG-design
LIB_DESIGN_NAME=design
AC_SUBST(LIB_DESIGN_NAME)

dnl   RainbruRPG-ogreGui
LIB_OGREGUI_NAME=ogreGui
AC_SUBST(LIB_OGREGUI_NAME)

#release versioning
GENERIC_MAJOR_VERSION=0
GENERIC_MINOR_VERSION=3
GENERIC_MICRO_VERSION=0

#API version (often = GENERIC_MAJOR_VERSION.GENERIC_MINOR_VERSION)
GENERIC_API_VERSION=1.0
AC_SUBST(GENERIC_API_VERSION)

#shared library versioning
COMMON_LIBRARY_VERSION="0:0:0"
AC_SUBST(COMMON_LIBRARY_VERSION)
CORE_LIBRARY_VERSION="0:0:0"
AC_SUBST(CORE_LIBRARY_VERSION)
DESIGN_LIBRARY_VERSION="0:0:0"
AC_SUBST(DESIGN_LIBRARY_VERSION)
OGREGUI_LIBRARY_VERSION="0:0:0"
AC_SUBST(OGREGUI_LIBRARY_VERSION)
TAPI_LIBRARY_VERSION="0:1:0"
AC_SUBST(TAPI_LIBRARY_VERSION)


dnl --------------------------------
dnl Package name and version number
dnl --------------------------------


PACKAGE=$GENERIC_LIBRARY_NAME
AC_SUBST(GENERIC_LIBRARY_NAME)

GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
GENERIC_RELEASE=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION
AC_SUBST(GENERIC_RELEASE)
AC_SUBST(GENERIC_VERSION)

VERSION=$GENERIC_VERSION
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Call a custom m4 MAcro that defines the install dir in config.h
RB_INSTALL_DIR

dnl The date
ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX

AC_DISABLE_STATIC
AC_LIBTOOL_WIN32_DLL dnl Handle dlls
AM_PROG_LIBTOOL
AM_SANITY_CHECK

AC_LANG_CPLUSPLUS

dnl Handles cross compil with prefix
RB_HANDLE_CROSS_COMPIL("/usr/cross", "")

dnl Checks for libraries and headers
RB_CHECK_FREETYPE(9.18)
RB_CHECK_OGREMAIN
RB_CHECK_PLSM2
RB_CHECK_LIBOIS
RB_CHECK_LIBFOX(1.6)
RB_CHECK_LIBCURL
dnl RB_CHECK_LIBSLANG Only used by terminalAPI
RB_CHECK_BOOST_FS
RB_CHECK_BOOST_THREAD
RB_CHECK_ENET
RB_CHECK_GLIB
RB_CHECK_LIBSIG
RB_CHECK_LIBGD
RB_CHECK_LIBGNET

dnl #################################################################"""
dnl #################################################################"""
dnl #################################################################"""
dnl Find the optional components we should build
RB_OPTION_SERVER
RB_OPTION_TESTS
RB_OPTION_EDITOR
RB_OPTION_TOOLS
RB_OPTION_EXAMPLES
RB_OPTION_TAPI
RB_OPTION_ALL
RB_OPTION_SCROLLPANE_TEST
RB_OPTION_MCL_TEST
RB_OPTION_OGRE_DEPREC_WARN

dnl #################################################################"""
dnl #################################################################"""
dnl #################################################################"""

dnl Conditionnal library linking
RB_CONDITIONAL_LINKING_LIB_MAGIC
RB_CONDITIONAL_LINKING_CPPUNIT

RB_OPTION_DEBUG

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Check for cross compilation. If yes, define DLLWRAP
if test "$host_os" = "mingw32msvc"; then
  dllwrap="i586-mingw32msvc-dllwrap"
else
  dllwrap=${target}-"dllwrap"
fi
AC_PATH_PROG(DLLWRAP, $dllwrap)

dnl Needs GNU gettext for translation
AM_GNU_GETTEXT

AC_CONFIG_FILES([Makefile			\
          po/Makefile.in			\
	  \
          common/Makefile			\
          terminalapi/Makefile			\
	  maincore/Makefile			\
	  ogreGui/Makefile			\
	  design/Makefile			\
	  client/Makefile			\
	  editor/Makefile			\
	  server/Makefile			\
	  tests/Makefile			\
	  tools/Makefile			\
	  tools/transmsg/Makefile		\
	  tools/xident/Makefile			\
	  tools/netflooder/Makefile		\
	  tools/ftpclient/Makefile		\
	  tools/hashsum/Makefile		\
	  examples/Makefile			\
	  examples/tapi/Makefile		\
	  \
 	  RainbruRPG.html/Makefile	        \
	  config/Makefile			\
	  data/Makefile				\
	  data/fox/Makefile			\
	  data/gui/Makefile			\
	  data/gui/XMLRefSchema/Makefile	\
	  data/gui/schemes/Makefile		\
	  data/gui/imagesets/Makefile		\
	  data/gui/looknfeel/Makefile		\
	  data/gui/fonts/Makefile		\
	  data/gui/layouts/Makefile		\
	  data/gui/overlays/Makefile		\
	  data/gui/ogreGui/Makefile		\
	  \
	  media/Makefile			\
	  media/packs/Makefile			\
	  media/materials/Makefile		\
	  media/materials/scripts/Makefile	\
	  media/materials/textures/Makefile	\
	  \
	  mapdata/Makefile			\
	  mapdata/terrains/Makefile		\
	  mapdata/terrains/hf129_3/Makefile	\
	  mapdata/materials/Makefile		\
	  mapdata/materials/textures/Makefile	\
	  mapdata/materials/scripts/Makefile	\
	  mapdata/materials/programs/Makefile	\
	  mapdata/models/Makefile		\
	  \
	  RainbruRPG.lsm RainbruRPG.spec	\
	  terminalapi-1.0.pc			\
	  RainbruRPG-common.pc])


AC_OUTPUT

echo
echo "#####################################"
echo
echo " You can generate a pdf manual by calling :"
echo "    make pdf"
echo
echo " To update the HTML documentation or if a Rainbru.HTML/Makefile.am"
echo " is missing :"
echo "    make html"
echo "    cp htmlMakefile.am RainbruRPG.html/Makefile.am"
echo "    autoconf&&automake&&./configure"
echo
echo "#####################################"
