#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([src/main.cpp])
AM_INIT_AUTOMAKE(rainbrurpg-services, 0.0.0-0)
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
AC_PROG_LIBTOOL

# Checks for libraries.
PKG_CHECK_MODULES([DEPENDENCIES], [guile-2.0  rainbrurpg-logger])
RB_CHECK_BOOST_SPIRIT
RB_CHECK_BOOST_GRAPH

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	rainbrurpg-services.pc
	])
AC_OUTPUT
