#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([rainbrurpg-meta], [0.0.0-4], [rainbru@users.sf.net])
AM_INIT_AUTOMAKE(rainbrurpg-meta, 0.0.0-4)
AC_CONFIG_HEADERS([config.h])

# Handle the custom foswiki_prefix
AC_DEFUN([RB_FOSWIKI_DIR],
  [AC_ARG_WITH(foswikidir,
    AS_HELP_STRING([--with-foswikidir=PATH], 
      [where to install foswiki plugin related files]),
  foswikidir="$withval", foswikidir=${prefix}/foswiki)
])
# Handle the custom foswiki_prefix
AC_DEFUN([RB_META_URL],
  [AC_ARG_WITH(metaurl,
    AS_HELP_STRING([--with-metaurl=URL], 
      [where is located the metaserver (foswiki adress)]),
  metaurl="$withval", metaurl=127.0.0.1)
  AC_SUBST([metaurl])dnl
  AC_DEFINE_UNQUOTED(META_URL, "$metaurl", The online metaserver URL)
])

# Handle foswiki Web name (default to Meta)
AC_DEFUN([RB_WEB_NAME],
  [AC_ARG_WITH(webname,
    AS_HELP_STRING([--with-webname=WIKINAME], 
      [in which Web will the metaserver archive will be generated]),
  webname="$withval", webname=Meta)
  AC_SUBST([metaurl])dnl
  AC_DEFINE_UNQUOTED(META_URL, "$metaurl", The online metaserver URL)
])

RB_FOSWIKI_DIR
RB_META_URL
RB_WEB_NAME
AC_SUBST([foswikidir])dnl
AC_SUBST([webname])dnl

# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([
  Makefile
  src/Makefile
  src/foswiki_plugin/Makefile
  src/libclient/Makefile
  src/libclient/rainbrurpg-meta-client.pc
  src/libserver/Makefile
  src/libserver/rainbrurpg-meta-server.pc
])

dnl Options summary
echo
echo "------------------------------------------------------------------------"
echo "$PACKAGE v$VERSION-$RELEASE configuration summary"
echo "------------------------------------------------------------------------"
echo
echo "Extra directory:"
echo "  Foswiki root directory.......: ${foswikidir}"
echo "  Metaserver URL...............: ${metaurl}"
echo "  Metaserver plugin WebName....: ${webname}"
