# This is the RainbruRPG.html/Makefile.am
#
# This file is deleted when calling make html

#SUBDIRS = fox gui
datafilesdir = $(prefix)/share/doc/RainbruRPG/
datafiles_DATA=   Concept-Index.html		\
Copying.html		\
index.html Instructions.html Invoking-RainbruRPG.html		\
Overview.html		\
Problems.html		\
Sample.html		\
Server.html 

